--- a/StageRaceFantasy.Api/StageRaceFantasy.Api.csproj
+++ b/StageRaceFantasy.Api/StageRaceFantasy.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -10,9 +10,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\StageRaceFantasy.Infrastructure\StageRaceFantasy.Infrastructure.csproj" />
-    <ProjectReference Include="..\Client\StageRaceFantasy.Client.csproj" />
-    <ProjectReference Include="..\Shared\StageRaceFantasy.Domain.csproj" />
+    <ProjectReference Include="..\StageRaceFantasy.Client\StageRaceFantasy.Client.csproj" />
+    <ProjectReference Include="..\StageRaceFantasy.Infrastructure\StageRaceFantasy.Infrastructure.csproj" />
+    <ProjectReference Include="..\StageRaceFantasy.Domain\StageRaceFantasy.Domain.csproj" />
   </ItemGroup>
 
 
