refactor first query in line with jason's clean architecture template

--- a/StageRaceFantasy.Client/StageRaceFantasy.Client.csproj
+++ b/StageRaceFantasy.Client/StageRaceFantasy.Client.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StageRaceFantasy.Application\StageRaceFantasy.Application.csproj" />
     <ProjectReference Include="..\StageRaceFantasy.Domain\StageRaceFantasy.Domain.csproj" />
   </ItemGroup>
 
